# xiaoqiuslam

./: ._LICENSE  ._README.md  .gitignore  CMakeLists.txt  README.md  hand_orb_extract_feature.cpp  readme.md
1_linux/: README.md
1_ubuntu_macos/: README.md
2_g++/: README.md
2_opencv&ros/a_opencv_cvmat/: 1_creat_CV_8UC1.cpp  3_creat_CV_8UC3.cpp  CMakeLists.txt  README.md  creat_CV_8UC1.cpp  creat_CV_8UC4.cpp  opencv_ros.md  read_CV_8UC1.cpp  read_CV_8UC3.cpp  read_depth.cpp  traverse_CV_8UC1.cpp
2_opencv_ros/a_opencv_cvmat/: 2_creat_CV_8UC1.cpp  CMakeLists.txt  README.md  read_CV_8UC4.cpp  read_image_uchar.cpp  traverse_CV_8UC3.cpp
3_cmake/: README.md
3_cmake/tutorial_1/: CMakeLists.txt
3_cmake/tutorial_5/: CMakeLists.txt
3_cmake/tutorial_5/example/: tutorial_5.cpp
3_opencv/: 0_create_CV_8UC1  0_create_CV_8UC1.cpp  0_create_CV_8UC3.cpp  0_create_CV_8UC4.cpp  10_lkdemo.cpp  12_SupportVectorMachines.cpp  17_addWeighted.cpp  21_UsePointerAccessPixel.cpp  24_14WaysToAccessPixel.cpp  26_MultiChannelImageBlending.cpp  28_DFT.cpp  35_medianBlur.cpp  37_ImageFiltering.cpp  38_dilate.cpp  39_erode.cpp  48_Morphology.cpp  4_video_capture.cpp  53_pyrDown.cpp  61_HoughLines.cpp  62_HoughLinesP.cpp  63_HoughCircles.cpp  64_HoughLines.cpp  68_equalizeHist.cpp  72_convexHull2.cpp  75_approxPolyDP.cpp  77_watershed.cpp  orb_cv.cpp  (+6 more)
5_point_cloud/: ._README.md  CMakeLists.txt  DensePointCloud.pcd  PointIndices.cpp  README.md  ground.cpp  loadPCDFile.cpp  point_cloud_at.cpp  transformPointCloud.cpp
5_point_cloud/13recognition识别/1基于对应分组的三维物体识别/: correspondence_grouping.cpp
5_point_cloud/NormalEstimation/: CMakeLists.txt
5_point_cloud/cluster_extraction/: 3.cpp  CMakeLists.txt  cc.cpp  extract_indices.cpp  qq.cpp
5_point_cloud/include/: OccupancyGrid.hpp  util3d_mapping.hpp
5_point_cloud/src/: util3d_filtering.cpp
5_point_cloud/voxel_grid/: voxel_grid.cpp
6_eigen_sophus/: ._README.md  2_eigen_math.cpp  4_plot_trajectory.cpp  6_sophus_pose_transform.cpp  CMakeLists.txt  README.md  luoxuanguiji.cpp
6_eigen_sophus/catkin_ws_tf/src/: CMakeLists.txt
6_eigen_sophus/catkin_ws_tf/src/dynamic_tutorials/: CMakeLists.txt
6_eigen_sophus/catkin_ws_tf/src/eigen_pkg/: package.xml
6_eigen_sophus/catkin_ws_tf/src/eigen_pkg/src/: eigen_1.cpp
6_eigen_sophus/catkin_ws_tf/src/image_pkg/src/: pub_image_topic.cpp  pub_video2image_topic.cpp  sub_image_topic.cpp
6_eigen_sophus/catkin_ws_tf/src/learning_tf2/: CMakeLists.txt
6_eigen_sophus/catkin_ws_tf/src/log/launch/: demo_log.launch
6_eigen_sophus/catkin_ws_tf/src/odometry/: package.xml
6_eigen_sophus/catkin_ws_tf/src/pcl_pkg/: CMakeLists.txt
6_eigen_sophus/catkin_ws_tf/src/pcl_pkg/src/两张图像生成点云/src/: detectFeatures.cpp  joinPointCloud.cpp
6_eigen_sophus/catkin_ws_tf/src/pcl_pkg/src/五张图像生成点云/: joinMap_pcd.cpp
6_eigen_sophus/catkin_ws_tf/src/rosparam/: CMakeLists.txt  package.xml
6_eigen_sophus/catkin_ws_tf/src/rosparam/config/: rosparam_config_v1.yaml
6_eigen_sophus/catkin_ws_tf/src/rosparam/launch/: demo_rosparam_v1.launch  demo_rosparam_v2.launch
6_eigen_sophus/catkin_ws_tf/src/rviz_pkg/src/: basic_shapes.cpp
6_eigen_sophus/catkin_ws_tf/src/topic_pkg/: package.xml
6_eigen_sophus/catkin_ws_tf/src/yaml_v1/: CMakeLists.txt
6_eigen_sophus/catkin_ws_tf/src/yaml_v2/launch/: demo_yaml_v2_write.launch
6_eigen_sophus/catkin_ws_tf/src/yaml_v2/src/: demo_yaml_v2_write.cpp
6_tf/g_tf_pkg/: CMakeLists.txt  package.xml  readme.md
7_rgbd_slam/b_two_rgbd_map/: .7798bd9738c422b9856e1d59883ed9d6d8dc7c.cam  CMakeLists.txt  two_rgbd_map.cpp
7_rgbd_slam/five_4txt_rgbd_map/: 4_plot_trajectory.cpp  CMakeLists.txt  five_rgbd_map.cpp  joinMap.cpp
7_rgbd_slam/mul_rgbd_Rt_map_g2o_github/: CMakeLists.txt
7_ros_pkg/odometry/: CMakeLists.txt
7_ros_pkg/odometry/src/: bsp_Serial.h  bsp_serial.cc  main.cc  odometry.cpp
7_ros_pkg/pcl_pkg/: CMakeLists.txt  package.xml
7_ros_pkg/pcl_pkg/src/: point_cloud_transform.cpp  ros_point_cloud.cpp
7_ros_pkg/pcl_pkg/src/两张图像生成点云/src/: generatePointCloud.cpp
7_ros_pkg/pcl_pkg/src/五张图像生成点云/: joinMap_pangolin.cpp
7_ros_pkg/rgbd_pkg/: CMakeLists.txt  package.xml  run.sh
7_ros_pkg/rgbd_pkg/src/: example.cpp  ros_rgbd.cpp
7_vo_ros/vo_g2o_map/: CMakeLists.txt
7_vo_ros/vo_g2o_map/include/: camera.h  g2o_types.h  map.h
7_vo_ros/vo_g2o_map/src/: camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  mappoint.cpp
7_vo_ros/vo_g2o_map/test/: run_vo.cpp
8_extract_feature/: CMakeLists.txt  ORBextractor.cc  README.md  zhixin.cpp
8_rviz/rviz_pkg/: package.xml
8_rviz/rviz_pkg/src/: basic_shapes.cpp
9_rgbd_slam/mul_rgbd_Rt_map_github/: CMakeLists.txt  visualOdometry.cpp
9_rgbd_slam/two_rgb_2d2d_ess_Rt/: CMakeLists.txt  two_rgb_rt_2d2d.cpp
9_rgbd_slam/two_rgb_2d2d_ess_Rt_tri_map/: CMakeLists.txt
9_stereo_orb_extract_feature/: CMakeLists.txt
9_stereo_orb_extract_feature/Examples/Stereo/: stereo_euroc.cc
9_stereo_orb_extract_feature/include/: Tracking.h
9_stereo_orb_extract_feature/src/: ORBextractor.cc  System.cc  Tracking.cc
g2o_examples/ba/: CMakeLists.txt
g2o边/: CMakeLists.txt  directBA.cpp  poses.txt  练习18-g2o边代码框.txt
pcl_stu/: CMakeLists.txt  VoxelGrid.cpp
pcl_stu/cluster_extraction/: CMakeLists.txt  cluster_extraction.cpp  extract_indices.cpp
pcl_stu/statistical_removal/: statistical_removal.cpp
project_slambook_1/: CMakeLists.txt
project_slambook_1/include/myslam/: camera.h  config.h  frame.h  g2o_types.h  map.h  mappoint.h
project_slambook_1/src/: CMakeLists.txt  camera.cpp  config.cpp  frame.cpp  g2o_types.cpp  map.cpp
ubuntu_vscode_opencv_study/: 0_create_CV_8UC1  1_read  2_erode_blur.cpp  32_blur.cpp  33_GaussianBlur.cpp  42_ErodeEX.cpp  49_floodFill.cpp  57_sobel.cpp  60_EdgeDetection.cpp  CMakeLists.txt  orb_self.cpp
ubuntu_vscode_opencv_study/4-yaml/yaml/: read_no_yaml_head.yaml
ubuntu_vscode_opencv_study/4-yaml/有改动的参数转换程序/mcptam_calibrations2multicol_calibrations/MultiCol_calibrations/: InteriorOrientationFisheye1.yaml
ubuntu_vscode_opencv_study/4-yaml/有改动的参数转换程序/mcptam_calibrations2multicol_calibrations/mcptam_calibrations/: camera3.yaml
(+487 files in other folders)
