<?xml version="1.0"?>
<package format="2">
  <name>rviz_pkg</name>
  <version>0.0.0</version>
  <description>The rviz_pkg package</description>
  <maintainer email="q@todo.todo">q</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>visualization_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <export>
  </export>
</package>
