CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

PROJECT( slam )

SET( CMAKE_CXX_COMPILER "g++")
SET( CMAKE_BUILD_TYPE DEBUG  )
SEt( CMAKE_CXX_FLAGS "-O3" )


# 增加PCL库的依赖
FIND_PACKAGE( PCL REQUIRED)

# 增加opencv的依赖
FIND_PACKAGE( OpenCV REQUIRED )


ADD_EXECUTABLE( visualOdometry visualOdometry.cpp)
TARGET_LINK_LIBRARIES( visualOdometry ${OpenCV_LIBS}  ${PCL_LIBRARIES} )
